@@ -1,3 +1,11 @@
+2011-12-01  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-msg.el (gnus-inews-do-gcc):
+	* message.el (message-send-mail):
+	* mml.el (mml-generate-mime): Share the value of the buffer-local
+	`message-options' variable between a draft buffer and temprary working
+	buffers.
+
 2011-11-30  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* message.el (message-pop-to-buffer): Revert 2011-09-11 change.
